fix: overflow contact page for small screens

--- a/src/pages/Contact/style.scss
+++ b/src/pages/Contact/style.scss
@@ -70,6 +70,12 @@
     }
   }
 
+  @media (max-width: 420px) {
+    body {
+      overflow: auto !important;
+    }
+  }
+
   // Mobile responsiveness
   @media (max-width: 768px) {
     .content {
